###################################################################################
#
# TextParser - Text Parsing Library
#
# Copyright (C) 2012-2013 Institute of Industrial Science, The University of Tokyo.
# All rights reserved.
#
###################################################################################
#

doc_includedir = $(prefix)/doc
doc_include_HEADERS = \
    $(top_builddir)/doc/design_description.pdf \
    $(top_builddir)/doc/program_description.pdf \
    $(top_builddir)/doc/users_manual.pdf
