###################################################################################
#
# TextParser - Text Parsing Library
#
# Copyright (C) 2012-2014 Institute of Industrial Science, The University of Tokyo.
# All rights reserved.
#
# Copyright (c) 2014 Advanced Institute for Computational Science, RIKEN.
# All rights reserved.
#
###################################################################################
#

doc_includedir = $(prefix)/doc
doc_include_HEADERS = \
    $(top_builddir)/doc/program_description.pdf \
    $(top_builddir)/doc/textparser_ug_jp.pdf \
    $(top_builddir)/doc/textparser_ug_en.pdf
