#
# TextParser - Text Parsing Library
#
# Copyright (C) 2012-2013 Institute of Industrial Science, The University of Tokyo.
# All rights reserved.
#

dist_include_HEADERS=TextParser.h TextParserTree.h \
TextParserCommon.h TextParserElement.h TextParser.inc
.PHONY:$(dist_include_HEADERS)
DISTCLEANFILES=*~