#
# TextParser - Text Parsing Library
#
# Copyright (C) 2012-2015 Institute of Industrial Science, The University of Tokyo.
# All rights reserved.
#

dist_noinst_DATA=\
correct_range_list_1.tpp \
incorrect_range_1.tpp \
incorrect_range_2.tpp \
incorrect_range_3.tpp \
incorrect_list_1.tpp \
incorrect_basic_19.txt \
incorrect_basic_18.txt \
incorrect_basic_17.txt \
incorrect_basic_16.txt \
incorrect_basic_15.txt \
incorrect_basic_14.txt \
incorrect_basic_13.txt \
incorrect_basic_12.txt \
incorrect_basic_11.txt \
incorrect_basic_10.txt \
incorrect_basic_9.txt \
incorrect_basic_8.txt \
incorrect_basic_7.txt \
incorrect_basic_6.txt \
incorrect_basic_5.txt \
incorrect_basic_4.txt \
incorrect_basic_3.txt \
incorrect_basic_2.txt \
incorrect_basic_1.txt \
incorrect_label_16.txt \
incorrect_label_15.txt \
incorrect_label_14.txt \
incorrect_label_13.txt \
incorrect_label_12.txt \
incorrect_label_11.txt \
incorrect_label_10.txt \
incorrect_label_9.txt \
incorrect_label_8.txt \
incorrect_label_7.txt \
incorrect_label_6.txt \
incorrect_label_2.txt \
incorrect_label_1.txt \
incorrect_labelarray_3.txt \
incorrect_labelarray_2.txt \
incorrect_labelarray_1.txt \
correct_labelarray_4.txt \
correct_labelarray_3.txt \
correct_labelarray_2.txt \
correct_labelarray_1.txt \
correct_cond_20.txt \
correct_cond_19.txt \
correct_cond_18.txt \
correct_cond_17.txt \
correct_cond_16.txt \
correct_cond_15.txt \
correct_cond_14.txt \
correct_cond_13.txt \
correct_cond_12.txt \
correct_cond_11.txt \
correct_cond_10.txt \
correct_cond_9.txt \
correct_cond_8.txt \
correct_cond_7.txt \
correct_cond_6.txt \
correct_cond_5.txt \
correct_cond_4.txt \
correct_cond_3.txt \
correct_cond_2.txt \
correct_cond_1.txt \
incorrect_cond_5.txt \
incorrect_cond_4.txt \
incorrect_cond_3.txt \
incorrect_cond_2.txt \
incorrect_cond_1.txt \
correct_label_8.txt \
correct_label_7.txt \
correct_label_6.txt \
correct_label_5.txt \
correct_label_4.txt \
correct_label_3.txt \
correct_label_2.txt \
correct_label_1.txt \
correct_string_4.txt \
correct_string_3.txt \
correct_string_2.txt \
correct_string_1.txt \
correct_basic_13.txt \
correct_basic_12.txt \
correct_basic_11.txt \
correct_basic_10.txt \
correct_basic_9.txt \
correct_basic_8.txt \
correct_basic_7.txt \
correct_basic_6.txt \
correct_basic_5.txt \
correct_basic_4.txt \
correct_basic_3.txt \
correct_basic_2.txt \
correct_basic_1.txt
#incorrect_label_5.txt 
#incorrect_label_4.txt 
#incorrect_label_3.txt 
#incorrect_label_17.txt


.PHONY:$(dist_noinst_DATA)
CLEANFILES=*_out.txt
